--- a/AppFluxoDeCaixa/appsettings.json
+++ b/AppFluxoDeCaixa/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AppFluxoDeCaixa-3288a382-c959-457d-b90d-a9876d6c9309;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=15.235.55.95\\MSSQLSERVER2012; Initial Catalog=dbAulasSenai; TrustServerCertificate=True; User ID=alunosenai;Password=alunosenai;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
