--- a/AppFluxoDeCaixa/appsettings.json
+++ b/AppFluxoDeCaixa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=thiagomazzi.database.windows.net; Initial Catalog=FluxoDeCaixa; TrustServerCertificate=True; User ID=senai;Password=Admin@123;"
+    "DefaultConnection": "Data Source=dbMazzi.mssql.somee.com; Initial Catalog=dbMazzi; TrustServerCertificate=True; User ID=thiagomazzi_SQLLogin_1;Password=wx3s3cwh2w;"
   },
 
   "Logging": {
